--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ section .title{
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
+    text-shadow: 1px 1px 4px #000000;
     font-family: 'Ubuntu', sans-serif;
 }
 section .title::before{
@@ -71,7 +72,8 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: #09c6f9;
+    text-shadow: 1px 1px 4px #000000;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -178,40 +180,55 @@ section .title::after{
 }
 .home .home-content .text-1{
     font-size: 27px;
+    text-shadow: 2px 2px 4px #000000;
 }
 .home .home-content .text-2{
     font-size: 75px;
     font-weight: 600;
     margin-left: -3px;
+    text-shadow: 2px 2px 4px #000000;
 }
 .home .home-content .text-3{
     font-size: 40px;
     margin: 5px 0;
+    text-shadow: 2px 2px 4px #000000;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color: #09c6f9;
+    text-shadow: 1px 1px 4px #000000;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background-color: #045de9;
+    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid white;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
+    color: white;
     background: none;
 }
 
 /* about section styling */
-.about .title::after{
-    content: "Bleh Bleh Bleh";
+.about, .teams{
+    color:#fff;
+    background: #111;
+}
+.about .title::before,
+.teams .title::before{
+    background: #fff;
+}
+.about .title::after,
+.teams .title::after{
+    background: #111;
+    content: "Long Text Test";
 }
 .about .about-content .left{
     width: 45%;
@@ -231,10 +248,12 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color: #09c6f9;
+    text-shadow: 1px 1px 4px #000000;
 }
 .about .about-content .right p{
     text-align: justify;
+    text-shadow: 1px 1px 4px #000000;
 }
 .about .about-content .right a{
     display: inline-block;
@@ -265,7 +284,7 @@ section .title::after{
 .services .title::after,
 .teams .title::after{
     background: #111;
-    content: "what i provide";
+    content: "Long Text Test";
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
@@ -273,11 +292,14 @@ section .title::after{
     text-align: center;
     border-radius: 6px;
     padding: 20px 25px;
+    margin-bottom: 20px;
     cursor: pointer;
     transition: all 0.3s ease;
+    text-shadow: 1px 1px 4px #000000;
 }
 .services .serv-content .card:hover{
-    background: crimson;
+    background-color: #045de9;
+    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -287,7 +309,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: crimson;
+    color: #09c6f9;
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -300,9 +322,18 @@ section .title::after{
 }
 
 /* skills section styling */
-
-.skills .title::after{
-    content: "what i know";
+.skills, .teams{
+    color:#fff;
+    background: #111;
+}
+.skills .title::before,
+.teams .title::before{
+    background: #fff;
+}
+.skills .title::after,
+.teams .title::after{
+    background: #111;
+    content: "Long Text Test";
 }
 .skills .skills-content .column{
     width: calc(50% - 30px);
@@ -328,7 +359,8 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: crimson;
+    color: #09c6f9;
+    text-shadow: 1px 1px 4px #000000;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -347,7 +379,7 @@ section .title::after{
 .skills .skills-content .right .line{
     height: 5px;
     width: 100%;
-    background: lightgrey;
+    background: #333;
     position: relative;
 }
 .skills .skills-content .right .line::before{
@@ -356,7 +388,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: #09c6f9;    
 }
 .skills-content .right .html::before{
     width: 90%;
@@ -375,8 +407,12 @@ section .title::after{
 }
 
 /* teams section styling */
+.teams, .teams{
+    color:#fff;
+    background: #111;
+}
 .teams .title::after{
-    content: "who with me";
+    content: "Long Text Test";
 }
 .teams .carousel .card{
     background: #222;
@@ -385,9 +421,11 @@ section .title::after{
     text-align: center;
     overflow: hidden;
     transition: all 0.3s ease;
+    text-shadow: 1px 1px 4px #000000;
 }
 .teams .carousel .card:hover{
-    background: crimson;
+    background-color: #045de9;
+    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
 }
 .teams .carousel .card .box{
     display: flex;
@@ -402,14 +440,20 @@ section .title::after{
 .teams .carousel .card .text{
     font-size: 25px;
     font-weight: 500;
-    margin: 10px 0 7px 0;
+    margin: 10px 0 0 0;
+}
+.teams .carousel .card .text-title{
+    font-size: 16px;
+    font-weight: 500;
+    margin: -8px 0 10px 0;
+    color: #09c6f9;
 }
 .teams .carousel .card img{
     height: 150px;
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid crimson;
+    border: 5px solid #09c6f9;
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -438,8 +482,18 @@ section .title::after{
 }
 
 /* contact section styling */
-.contact .title::after{
-    content: "get in touch";
+.contact, .teams{
+    color:#fff;
+    background: #111;
+}
+.contact .title::before,
+.teams .title::before{
+    background: #fff;
+}
+.contact .title::after,
+.teams .title::after{
+    background: #111;
+    content: "Long Text Test";
 }
 .contact .contact-content .column{
     width: calc(50% - 30px);
@@ -465,7 +519,8 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: #09c6f9;
+    text-shadow: 1px 1px 4px #000000;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
