--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color:  #09c6f9;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -125,7 +125,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color:  #09c6f9;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -205,19 +205,18 @@ section .title::after{
 }
 .home .home-content a{
     display: inline-block;
-    background-color: #045de9;
-    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+    background:  #09c6f9;
     color: #fff;
-    font-size: 25px;
-    padding: 12px 36px;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
     margin-top: 20px;
-    font-weight: 400;
     border-radius: 6px;
-    border: 2px solid white;
+    border: 2px solid  #09c6f9;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: white;
+    color:  #09c6f9;
     background: none;
 }
 
@@ -262,18 +261,18 @@ section .title::after{
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background:  #09c6f9;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid  #09c6f9;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color:  #09c6f9;
     background: none;
 }
 
@@ -357,14 +356,14 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: crimson;
+    background:  #09c6f9;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid  #09c6f9;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
@@ -507,11 +506,10 @@ section .title::after{
 }
 .portfolio .portfolio-content .portfolio-box{
     width: calc(33% - 10px);
-    height: 200px;
+    height: 240px;
     background: #222;
     text-align: center;
     border-radius: 6px;
-    padding: 20px 25px;
     margin-bottom: 20px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -522,42 +520,18 @@ section .title::after{
 	box-shadow: 2px 2px 13px rgba(0,0,0,0.3);
 }
 .portfolio .portfolio-content .portfolio-box img{
-    width: 100%;
+    height: 100%;
 	height: 100%;
-	object-fit: cover;
+    object-fit: cover;
+    border-radius: 6px;
+    position: relative;
 }
-.portfolio .portfolio-content .portfolio-box .overlay-text{
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	background-color: rgba(23,209,172,0.80);
-	display:none;
-}
-.portfolio .portfolio-content .portfolio-box .overlay-text h1,p{
-	color: #FFFFFF;
-}
-.portfolio .portfolio-content .portfolio-box .overlay-text h1{
-	font-size: 2.2rem;
-	margin: 0px;
-	padding: 0px;
-	letter-spacing: 2px;	
-}
-.portfolio .portfolio-content .portfolio-box .overlay-text p{
-	font-size: 1.2rem;
-	margin: 0px;
-}
-.portfolio .portfolio-content .portfolio-box:hover{
-    background-color: #045de9;
-    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+.portfolio .portfolio-content .portfolio-box h1{
+    color: BLACK;
 }
 
 /* contact section styling */
+
 .contact, .teams{
     color:#fff;
     background: #111;
@@ -652,8 +626,8 @@ section .title::after{
 .contact .right form .button button{
     width: 100%;
     height: 100%;
-    border: 2px solid crimson;
-    background: crimson;
+    border: 2px solid  #09c6f9;
+    background:  #09c6f9;
     color: #fff;
     outline: none;
     font-size: 20px;
@@ -663,7 +637,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .contact .right form .button button:hover{
-    color: crimson;
+    color:  #09c6f9;
     background: none;
 }
 
@@ -675,13 +649,17 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: crimson;
+    color:  #09c6f9;
     text-decoration: none;
 }
 footer span a:hover{
     text-decoration: underline;
 }
-
+  @keyframes animate {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+  }
 
 /* responsive media query start */
 @media (max-width: 1300px) {
