--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /*  import google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
+:root{
+    --gradient-light:#09c6f9;
+    --gradient-dark:#045de9;
+    --accent:#09c6f9;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -16,14 +22,17 @@ html{
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    /*background: #f1f1f1;*/
+    background: linear-gradient(var(--gradient-dark) 0%, var(--gradient-light)74%);
 }
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    /*background: #888;*/
+    background: #fff;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    /*background: #555;*/
+    background: #ddd;
 }
 
 /* all similar content styling codes */
@@ -35,13 +44,14 @@ section{
     padding: 0 80px;
     margin: auto;
 }
-.about, .services, .skills, .teams, .portfolio, .contact, footer{
+.about, .services, .skills, .teams, .portfolio, .contact, .social, footer{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content, 
 .services .serv-content,
 .skills .skills-content,
 .portfolio .portfolio-content,
+.social .cards-content,
 .contact .contact-content{
     display: flex;
     flex-wrap: wrap;
@@ -63,7 +73,7 @@ section .title::before{
     position: absolute;
     bottom: 0px;
     left: 50%;
-    width: 180px;
+    width: 225px;
     height: 3px;
     background: #111;
     transform: translateX(-50%);
@@ -73,10 +83,10 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: #09c6f9;
+    color: var(--accent);
     text-shadow: 1px 1px 4px #000000;
     padding: 0 5px;
-    background: #fff;
+    background: #ffffffff;
     transform: translateX(-50%);
 }
 
@@ -91,8 +101,8 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background-color: #045de9;
-    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+    background-color: var(--gradient-dark);
+    background-image: linear-gradient(315deg, var(--gradient-dark) 0%, var(--gradient-light)74%);
     box-shadow: 4px 4px 20px #000000;
 }
 .navbar .max-width{
@@ -106,7 +116,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color:  #09c6f9;
+    color:  var(--accent);
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -125,7 +135,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color:  #09c6f9;
+    color:  var(--accent);
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -142,8 +152,8 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background-color: #045de9;
-    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+    background-color: var(--gradient-dark);
+    background-image: linear-gradient(315deg, var(--gradient-dark) 0%, var(--gradient-light)74%);
     box-shadow: 1px 1px 10px #000000;
     right: 30px;
     bottom: 10px;
@@ -180,8 +190,8 @@ section .title::after{
     background-attachment: fixed;
     font-family: 'Ubuntu', sans-serif;
 }
-.home .max-width{
-    margin: auto 0 auto 30px;
+.home-content{
+    text-align: center;
 }
 .home .home-content .text-1{
     font-size: 27px;
@@ -199,24 +209,24 @@ section .title::after{
     text-shadow: 2px 2px 4px #000000;
 }
 .home .home-content .text-3 span{
-    color: #09c6f9;
+    color: var(--accent);
     text-shadow: 1px 1px 4px #000000;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background:  #09c6f9;
+    background:  var(--accent);
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid  #09c6f9;
+    border: 2px solid  var(--accent);
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color:  #09c6f9;
+    color:  var(--accent);
     background: none;
 }
 
@@ -229,8 +239,7 @@ section .title::after{
 .teams .title::before{
     background: #fff;
 }
-.about .title::after,
-.teams .title::after{
+.about .title::after{
     background: #111;
     content: "Long Text Test";
 }
@@ -252,7 +261,7 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: #09c6f9;
+    color: var(--accent);
     text-shadow: 1px 1px 4px #000000;
 }
 .about .about-content .right p{
@@ -261,18 +270,18 @@ section .title::after{
 }
 .about .about-content .right a{
     display: inline-block;
-    background:  #09c6f9;
+    background:  var(--accent);
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid  #09c6f9;
+    border: 2px solid  var(--accent);
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color:  #09c6f9;
+    color:  var(--accent);
     background: none;
 }
 
@@ -281,12 +290,10 @@ section .title::after{
     color:#fff;
     background: #111;
 }
-.services .title::before,
-.teams .title::before{
+.services .title::before{
     background: #fff;
 }
-.services .title::after,
-.teams .title::after{
+.services .title::after{
     background: #111;
     content: "Long Text Test";
 }
@@ -306,8 +313,8 @@ section .title::after{
     text-shadow: 1px 1px 4px #000000;
 }
 .services .serv-content .card:hover{
-    background-color: #045de9;
-    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+    background-color: var(--gradient-dark);
+    background-image: linear-gradient(315deg, var(--gradient-dark) 0%, var(--gradient-light)74%);
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -317,7 +324,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: #09c6f9;
+    color: var(--accent);
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -334,12 +341,10 @@ section .title::after{
     color:#fff;
     background: #111;
 }
-.skills .title::before,
-.teams .title::before{
+.skills .title::before{
     background: #fff;
 }
-.skills .title::after,
-.teams .title::after{
+.skills .title::after{
     background: #111;
     content: "Long Text Test";
 }
@@ -356,18 +361,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background:  #09c6f9;
+    background:  var(--accent);
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid  #09c6f9;
+    border: 2px solid  var(--accent);
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: #09c6f9;
+    color: var(--accent);
     text-shadow: 1px 1px 4px #000000;
     background: none;
 }
@@ -396,7 +401,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: #09c6f9;    
+    background: var(--accent);    
 }
 .skills-content .right .html::before{
     width: 90%;
@@ -420,6 +425,7 @@ section .title::after{
     background: #111;
 }
 .teams .title::after{
+    background: #111;
     content: "Long Text Test";
 }
 .teams .carousel .card{
@@ -432,8 +438,8 @@ section .title::after{
     text-shadow: 1px 1px 4px #000000;
 }
 .teams .carousel .card:hover{
-    background-color: #045de9;
-    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+    background-color: var(--gradient-dark);
+    background-image: linear-gradient(315deg, var(--gradient-dark) 0%, var(--gradient-light)74%);
 }
 .teams .carousel .card .box{
     display: flex;
@@ -454,7 +460,7 @@ section .title::after{
     font-size: 16px;
     font-weight: 500;
     margin: -8px 0 10px 0;
-    color: #09c6f9;
+    color: var(--accent);
 }
 .teams .carousel .card:hover .text-title{
     color: #fff;
@@ -464,7 +470,7 @@ section .title::after{
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid #09c6f9;
+    border: 5px solid var(--accent);
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -480,7 +486,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid  #09c6f9!important;
+    border: 2px solid  var(--accent)!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -489,7 +495,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background:  #09c6f9!important;
+    background:  var(--accent)!important;
 }
 
 /* portfolio section styling */
@@ -521,13 +527,103 @@ section .title::after{
 }
 .portfolio .portfolio-content .portfolio-box img{
     height: 100%;
-	height: 100%;
+	width: 100%;
     object-fit: cover;
     border-radius: 6px;
     position: relative;
 }
+.portfolio .portfolio-content .portfolio-box a{
+    height: 100%;
+	width: 100%;
+}
 .portfolio .portfolio-content .portfolio-box h1{
-    color: BLACK;
+    color: #fff;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+/*  CARDS   */
+
+.social{
+    color:#fff;
+    background: #111;
+}
+.social .title::before{
+    background: #fff;
+    width: 275px;
+}
+.social .title::after{
+    background: #111;
+    content: "Find Your Community";
+}
+.social .card{
+    background-color: #222;
+    color: #fff;
+    padding: 1.5rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+
+    border-radius: 6px;
+    text-align: center;
+    text-shadow: 1px 1px 4px #000000;
+
+    width: calc(33% - 10px);
+    height: 400px;
+    margin-bottom: 25px;
+}
+
+.card-title-large{
+    font-family: fantasy;
+    font-size: 10rem;
+    letter-spacing: .5rem;
+    transform:translateX(7rem);
+    color: #111;
+    transition: transform 2s;
+    text-shadow: 0px 0px 0px #00000000;
+}
+
+.card-title-small{
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+}
+
+.card-description{
+    font-size: 1.2rem;
+    line-height: 1.5;
+}
+
+.card-cta{
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    margin-top: 1rem;
+    align-self: flex-end;
+}
+
+.card:hover .card-title-large{
+    transform: translateX(-150%);
+    color: #fff;
+}
+
+.card.youtube:hover{
+    background-color: #FF0000;
+}
+.card.twitter:hover{
+    background-color: #00acee;
+}
+.card.facebook:hover{
+    background-color: #1778F2;
+}
+.card.discord:hover{
+    background-color: #5663F7;
+}
+.card.steam:hover{
+    background-color: #171a21;
+}
+.card.telegram:hover{
+    background-color: #0088cc;
 }
 
 /* contact section styling */
@@ -536,12 +632,10 @@ section .title::after{
     color:#fff;
     background: #111;
 }
-.contact .title::before,
-.teams .title::before{
+.contact .title::before{
     background: #fff;
 }
-.contact .title::after,
-.teams .title::after{
+.contact .title::after{
     background: #111;
     content: "Long Text Test";
 }
@@ -569,7 +663,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: #09c6f9;
+    color: var(--accent);
     text-shadow: 1px 1px 4px #000000;
 }
 .contact .contact-content .info .head{
@@ -626,8 +720,8 @@ section .title::after{
 .contact .right form .button button{
     width: 100%;
     height: 100%;
-    border: 2px solid  #09c6f9;
-    background:  #09c6f9;
+    border: 2px solid  var(--accent);
+    background:  var(--accent);
     color: #fff;
     outline: none;
     font-size: 20px;
@@ -637,7 +731,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .contact .right form .button button:hover{
-    color:  #09c6f9;
+    color:  var(--accent);
     background: none;
 }
 
@@ -649,7 +743,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color:  #09c6f9;
+    color:  var(--accent);
     text-decoration: none;
 }
 footer span a:hover{
@@ -667,20 +761,7 @@ footer span a:hover{
         margin-left: 0px;
     }
 }
-
-@media (max-width: 1104px) {
-    .about .about-content .left img{
-        height: 350px;
-        width: 350px;
-    }
-}
-
-@media (max-width: 991px) {
-    .max-width{
-        padding: 0 50px;
-    }
-}
-@media (max-width: 947px){
+@media (max-width:1185px){
     .menu-btn{
         display: block;
         z-index: 999;
@@ -710,6 +791,22 @@ footer span a:hover{
         margin: 20px 0;
         font-size: 25px;
     }
+    
+}
+
+@media (max-width: 1104px) {
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px) {
+    .max-width{
+        padding: 0 50px;
+    }
+}
+@media (max-width: 947px){
     .home .home-content .text-2{
         font-size: 70px;
     }
@@ -735,14 +832,23 @@ footer span a:hover{
         flex: 100%;
     }
     .services .serv-content .card,
+    .social .card,
     .portfolio .portfolio-content .portfolio-box{
         width: calc(50% - 10px);
         margin-bottom: 20px;
+    }
+    .card:hover .card-title-large{
+        transform: translateX(-120%);
     }
     .skills .skills-content .column,
     .contact .contact-content .column{
         width: 100%;
         margin-bottom: 35px;
+    }
+}
+@media (max-width: 790px){
+    .card:hover .card-title-large{
+        transform: translateX(-140%);
     }
 }
 
@@ -759,8 +865,12 @@ footer span a:hover{
     .home .home-content a{
         font-size: 20px;
     }
-    .services .serv-content .card{
+    .services .serv-content .card,
+    .social .card{
         width: 100%;
+    }
+    .card:hover .card-title-large{
+        transform: translateX(-30%);
     }
     .portfolio .portfolio-content .portfolio-box{
         width: 100%;
@@ -793,4 +903,20 @@ footer span a:hover{
         font-size: 23px;
         line-height: 38px;
     }
+    .card:hover .card-title-large{
+        transform: translateX(-80%);
+    }
+}
+
+@media (max-width: 400px){
+    .navbar .logo a{
+        font-size: 25px;
+    }
+    .card:hover .card-title-large{
+        transform: translateX(-120%);
+    }
+}
+
+@media (max-width: 340px){
+    
 }
