--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 
 :root{
     --gradient-light:#09c6f9;
+    --gradient-light-transition:#09c6f999;
     --gradient-dark:#045de9;
+    --gradient-dark-transition:#045de999;
     --accent:#09c6f9;
 }
 
@@ -44,7 +46,7 @@ section{
     padding: 0 80px;
     margin: auto;
 }
-.about, .services, .skills, .teams, .portfolio, .contact, .social, footer{
+.about, .services, .skills, .teams, .portfolio, .contact, .social, .blog-news, footer{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content, 
@@ -510,38 +512,138 @@ section .title::after{
     background: #111;
     content: "Long Text Test";
 }
-.portfolio .portfolio-content .portfolio-box{
-    width: calc(33% - 10px);
-    height: 240px;
-    background: #222;
-    text-align: center;
-    border-radius: 6px;
-    margin-bottom: 20px;
-    cursor: pointer;
-    transition: all 0.3s ease;
+.wrapper{
+    margin: 100px auto;
+  }
+  .wrapper nav{
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    text-shadow: 1px 1px 4px #000000;
-	box-shadow: 2px 2px 13px rgba(0,0,0,0.3);
-}
-.portfolio .portfolio-content .portfolio-box img{
-    height: 100%;
-	width: 100%;
-    object-fit: cover;
-    border-radius: 6px;
-    position: relative;
-}
-.portfolio .portfolio-content .portfolio-box a{
-    height: 100%;
-	width: 100%;
-}
-.portfolio .portfolio-content .portfolio-box h1{
+  }
+  .wrapper .items{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+  .items span{
+    display: inline-block;
+    background:  var(--accent);
     color: #fff;
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-}
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid  var(--accent);
+    transition: all 0.3s ease;
+    text-align: center;
+    margin: 10px;
+  }
+  .items span.active,
+  .items span:hover{
+    color:  var(--accent);
+    background: none;
+  }
+
+  .gallery{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+  }
+  .gallery .image{
+    width: calc(100% / 3);
+    padding: 7px;
+  }
+  .gallery .image a{
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 12px;
+    
+  }
+  .gallery .image img{
+    width: 100%;
+    vertical-align: middle;
+    transition: all 0.3s ease;
+  }
+  .gallery .image:hover img{
+    transform: scale(1.1);
+  }
+  .gallery .image.hide{
+    display: none;
+  }
+  .gallery .image.show{
+    animation: animate 0.4s ease;
+  }
+  @keyframes animate {
+    0%{
+      transform: scale(0.5);
+    }
+    100%{
+      transform: scale(1);
+    }
+  }
+  .preview-box{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.9);
+    background: #fff;
+    max-width: 700px;
+    width: 100%;
+    z-index: 5;
+    opacity: 0;
+    pointer-events: none;
+    border-radius: 3px;
+    padding: 0 5px 5px 5px;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
+  }
+  .preview-box.show{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+    transition: all 0.3s ease;
+  }
+  .preview-box .details{
+    padding: 13px 15px 13px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .details .title{
+    display: flex;
+    font-size: 18px;
+    font-weight: 400;
+  }
+  .details .title p{
+    font-weight: 500;
+    margin-left: 5px;
+  }
+  .details .icon{
+    color: #007bff;
+    font-style: 22px;
+    cursor: pointer;
+  }
+  .preview-box .image-box{
+    width: 100%;
+    display: flex;
+  }
+  .image-box img{
+    width: 100%;
+    border-radius: 0 0 3px 3px;
+  }
+  .shadow{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    display: none;
+    background: rgba(0,0,0,0.4);
+  }
+  .shadow.show{
+    display: block;
+  }
 
 /*  CARDS   */
 
@@ -842,11 +944,26 @@ footer span a:hover{
         margin-bottom: 35px;
     }
 }
+@media (max-width: 800px) {
+    .gallery .image{
+      width: calc(100% / 2);
+    }
+  }
+
 @media (max-width: 790px){
     .card:hover .card-title-large{
         transform: translateX(-140%);
     }
 }
+
+@media (max-width: 700px) {
+    .wrapper nav .items{
+      max-width: 600px;
+    }
+    nav .items span{
+      padding: 7px 15px;
+    }
+  }
 
 @media (max-width: 690px) {
     .max-width{
@@ -872,6 +989,22 @@ footer span a:hover{
         width: 100%;
     }
 }
+
+@media (max-width: 600px) {
+    .wrapper{
+      margin: 30px auto;
+    }
+    .wrapper nav .items{
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    nav .items span{
+      margin: 5px;
+    }
+    .gallery .image{
+      width: 100%;
+    }
+  }
 
 @media (max-width: 500px) {
     .home .home-content .text-2{
@@ -917,168 +1050,164 @@ footer span a:hover{
     
 }
 
-.wrapper{
-    margin: 100px auto;
-  }
-  .wrapper nav{
-    display: flex;
-    justify-content: center;
-  }
-  .wrapper .items{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-  }
-  .items span{
-    display: inline-block;
-    background:  var(--accent);
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 30px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid  var(--accent);
-    transition: all 0.3s ease;
-    text-align: center;
-    margin: 10px;
-  }
-  .items span.active,
-  .items span:hover{
-    color:  var(--accent);
-    background: none;
-  }
 
-  .gallery{
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
-  }
-  .gallery .image{
-    width: calc(100% / 3);
-    padding: 7px;
-  }
-  .gallery .image a{
-    display: flex;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 12px;
-    
-  }
-  .gallery .image img{
-    width: 100%;
-    vertical-align: middle;
-    transition: all 0.3s ease;
-  }
-  .gallery .image:hover img{
-    transform: scale(1.1);
-  }
-  .gallery .image.hide{
-    display: none;
-  }
-  .gallery .image.show{
-    animation: animate 0.4s ease;
-  }
-  @keyframes animate {
-    0%{
-      transform: scale(0.5);
-    }
-    100%{
-      transform: scale(1);
-    }
-  }
-  .preview-box{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.9);
+.blog-news{
+    color:#fff;
+    background: #111;
+}
+.blog-news .title::after{
+    background: #111;
+    content: "Newest News";
+}
+.blog-news .title::before{
     background: #fff;
-    max-width: 700px;
-    width: 100%;
-    z-index: 5;
-    opacity: 0;
-    pointer-events: none;
-    border-radius: 3px;
-    padding: 0 5px 5px 5px;
-    box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
-  }
-  .preview-box.show{
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-    transition: all 0.3s ease;
-  }
-  .preview-box .details{
-    padding: 13px 15px 13px 10px;
+}
+.blog-news a{
+    text-decoration: none;
+    color: inherit;
+}
+.blog-card{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .details .title{
-    display: flex;
-    font-size: 18px;
-    font-weight: 400;
-  }
-  .details .title p{
-    font-weight: 500;
-    margin-left: 5px;
-  }
-  .details .icon{
-    color: #007bff;
-    font-style: 22px;
-    cursor: pointer;
-  }
-  .preview-box .image-box{
+    flex-direction: column;
+    box-shadow: 2px 8px 10px rgba(0,0,0,0.05);
+    margin: 20px 0 20px 0;
+}
+.image-data{
+    height: 250px;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    border-radius: 12px 12px 0 0;
+}
+
+.background-image{
     width: 100%;
-    display: flex;
-  }
-  .image-box img{
-    width: 100%;
-    border-radius: 0 0 3px 3px;
-  }
-  .shadow{
-    position: fixed;
-    left: 0;
-    top: 0;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    z-index: -1;
+    transition: transform 1s;
+    object-fit: cover;
+}
+
+.blog-card:hover .background-image{
+    transform: scale(1.2);
+}
+
+.publication-details{
     width: 100%;
-    z-index: 2;
-    display: none;
-    background: rgba(0,0,0,0.4);
-  }
-  .shadow.show{
+    height: 100%;
+    background: linear-gradient(315deg, var(--gradient-dark-transition) 0%, var(--gradient-light-transition)74%);
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+}
+
+.publication-details i{
+    margin-right: 12px;
+}
+
+.post-author{
+    display: inline-block;
+    margin-bottom: 6px;
+    transition: all .6s;
+    transition: all .5s;
+}
+.post-author:hover{
+    color: #ffffffad;
+}
+.post-date{
     display: block;
-  }
-  @media (max-width: 1000px) {
-    .gallery .image{
-      width: calc(100% / 3);
+}
+.post-data{
+    background-color: #222;
+    padding: 20px 30px;
+    position: relative;
+    border-radius: 0 0 12px 12px;
+}
+
+.post-title{
+    font-size: 35px;
+    line-height: 1;
+}
+.post-subtitle{
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #a2a2a2;
+    margin: 10px 0 15px 0;
+}
+.post-cta{
+    text-align: right;
+    font-weight: bold;
+    margin-top: 10px;
+}
+.post-cta a{
+    background: linear-gradient(315deg, var(--gradient-dark) 0%, var(--gradient-light)74%);
+    -webkit-background-clip: text;
+    color: transparent;
+    position: relative;
+}
+.post-cta a::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 100%;
+    height: 3px;
+    background: linear-gradient(315deg, var(--gradient-dark) 0%, var(--gradient-light)74%);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform .5s;
+}
+.post-cta a:hover::before{
+    transform: scaleX(1);
+}
+
+@media screen and (min-width: 600px) {
+    .blog-card{
+        flex-direction: row;
+        max-height: 750px;
     }
-  }
-  @media (max-width: 800px) {
-    .gallery .image{
-      width: calc(100% / 2);
+
+    .image-data{
+        flex-basis: 35%;
+        height: unset;
+        border-radius: 12px 0 0 12px;
     }
-  }
-  @media (max-width: 700px) {
-    .wrapper nav .items{
-      max-width: 600px;
+
+    .publication-details{
+        transform: translateX(-110%);
+        transition: transform .5s;
     }
-    nav .items span{
-      padding: 7px 15px;
+    .blog-card:hover .publication-details{
+        transform: translateX(0);
     }
-  }
-  @media (max-width: 600px) {
-    .wrapper{
-      margin: 30px auto;
+
+    .post-data{
+        flex-basis: 65%;
+        border-radius: 0 12px 12px 0;
     }
-    .wrapper nav .items{
-      flex-wrap: wrap;
-      justify-content: center;
+
+    .post-author{
+        transform: translateY(50px);
+        opacity: 0;
+        transition-delay: .3s;
     }
-    nav .items span{
-      margin: 5px;
+    .post-date{
+        transform: translateY(50px);
+        opacity: 0;
+        transition: all .5s .3s;
     }
-    .gallery .image{
-      width: 100%;
+    .blog-card:hover .post-author,
+    .blog-card:hover .post-date{
+        transform: translateY(0);
+        opacity: 1;
     }
-  }
+}
